[package]
name = "k8s-controller"
version = "0.1.0"
authors = ["Valentin <vgurmeza@xevo.com>"]
edition = "2020"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.15.0"
serde = "1.0.98"
serde_derive = "1.0.98"
serde_json = "1.0.40"
